--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
-    <title>Spring Security Example</title>
+    <title>Let's start!</title>
 </head>
 <body>
-<h1>Welcome to Index PAGE!</h1>
+<h1>Hello</h1>
 <a th:href="@{/login}">Login</a>
-<br/>
-<a th:href="@{/registration}">Registration</a>
 
 </body>
 </html>
