--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,117 +1,23 @@
 <!DOCTYPE html>
-<html lang="en"
-      xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" >
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-          integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <title>Все пользователи</title>
+    <title>Home Page</title>
 </head>
 <body>
-<header>
-    <nav xmlns:th="http://www.thymeleaf.org"
-         class="navbar navbar-dark bg-dark flex-md-nowrap p-1 shadow">
-        <div class="container-fluid">
-            <div th:if="${#request.userPrincipal != null}">
-        <span class="navbar-text font-weight-bold" style="color: white"
-              th:text="${user.getEmail()}">
-        </span>
-
-                <span class="navbar-text" style="color: white"
-                      th:text="' with roles: ' + ${#strings.arrayJoin(user.getRoles(), ' ')}">
-        </span>
-            </div>
-
-            <div th:if="${#request.userPrincipal == null}">
-        <span class="navbar-text font-weight-bold" style="color: white"
-              th:text="'Привет Гость.'">
-        </span>
-
-                <span class="navbar-text" style="color: white"
-                      th:text="'пожалуйста авторизуйся'">
-        </span>
-            </div>
-            <div>
-                <ul class="navbar-nav">
-                    <li class="nav-item text-nowrap">
-                        <a class="nav-link" th:if="${#request.userPrincipal != null}" th:href="@{/logout}">Logout</a>
-                        <a class="nav-link" th:if="${#request.userPrincipal == null}" th:href="@{/login}">Login</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-</header>
-<main>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-2 bg-white"
-                 style="padding-top: 20px;
-                        padding-left: 0px;
-                        padding-right: 0px;
-                        height: 100vh">
-
-                <!--навигация слева-->
-                <ul class="nav nav-pills flex-column">
-
-                    <div sec:authorize="hasAuthority('ROLE_USER')">
-                        <li class="nav-item">
-                            <a class="nav-link active"
-                               href="/user">User</a>
-                        </li>
-                    </div>
-
-                    <div sec:authorize="hasAuthority('ROLE_ADMIN')">
-                        <li class="nav-item">
-                            <a class="nav-link" data-toggle="tab" href="/admin">Admin</a>
-                        </li>
-                    </div>
-                </ul>
-            </div>
-
-            <div class="col-md-10 bg-light"
-                 style="padding-top: 20px;
-                        height: 100vh">
-                <div class="tab-content">
-                    <div class="tab-pane fade show active" id="User">
-                        <h2 class="h2">User</h2>
-
-                        <div class="tab-content">
-                            <div class="tab-pane fade show active" id="UsersTable">
-                                <div class="card">
-                                    <h5 class="card-header">Your Credentials</h5>
-                                    <div class="card-body text-center">
-                                        <table class="table table-striped">
-                                            <thead>
-                                            <tr>
-                                                <th>ID</th>
-                                                <th>First Name</th>
-                                                <th>Last Name</th>
-                                                <th>Age</th>
-                                                <th>Email</th>
-                                                <th>Role</th>
-                                            </tr>
-                                            </thead>
-                                            <tbody>
-                                            <tr>
-                                                <td th:text="${user.getId()}"></td>
-                                                <td th:text="${user.getFirstName()}"></td>
-                                                <td th:text="${user.getLastName()}"></td>
-                                                <td th:text="${user.getAge()}"></td>
-                                                <td th:text="${user.getEmail()}"></td>
-                                                <td th:utext="${#strings.arrayJoin(user.getAuthorities(), ' ')}"></td>
-                                            </tr>
-                                            </tbody>
-                                        </table>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</main>
+<h1>Welcome</h1>
+<table border="1" bordercolor="#101299">
+    <tr>
+        <th>ID</th>
+        <th>Name</th>
+        <th>Password</th>
+    </tr>
+    <tr>
+        <td th:text="${users.getId()}"></td>
+        <td th:text="${users.getUsername()}"></td>
+        <td th:text="${users.getPassword()}"></td>
+    </tr>
+    </th:block>
+</table>
+<a th:href="@{/logout}">Logout</a>
+</body>
+</html>
